# Dydat

./: .dockerignore  .env.example  .gitignore  AVVIO-RAPIDO.md  CLAUDE.md  README.md  alembic.ini  avvia-dydat-semplice.ps1  avvia-dydat.bat  avvia-dydat.ps1  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  start-backend.bat  start.bat  template_roadmap.md
.claude/: status.md
alembic/: env.py
app/: config.py  main.py
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: d5767045e1bb_initial_schema_all_17_tables.py
backend/app/api/: auth.py  deps.py  onboarding.py  sessione.py  temi.py
backend/app/core/: contesto.py  conversazione.py  elaborazione.py  gamification.py  onboarding.py  sessione.py  sicurezza.py  turno.py
backend/app/db/: engine.py
backend/app/db/crud/: utenti.py
backend/app/db/models/: gamification.py  stato_utente.py  utenti.py
backend/app/grafo/: algoritmi.py  fsrs.py  stato.py  struttura.py
backend/app/llm/: client.py  tools.py
backend/app/llm/prompts/: direttive.py  system_prompt.py
backend/app/schemas/: achievement.py  auth.py  onboarding.py  sessione.py
backend/docs/: report_test_e2e_manuale.md
backend/scripts/: import_extraction.py
backend/tests/: test_auth.py  test_contesto.py  test_e2e.py  test_elaborazione.py  test_health.py  test_onboarding.py  test_sessione.py
bolt_project/: index.html  tailwind.config.js
docs/: CLAUDE_CODE_BRIEF_FRONTEND.md  dydat_api_reference.md  dydat_brief_rocket_new_v2.md  dydat_digest.md  dydat_direzione_visiva_v2.md  roadmap.md
frontend/: pubspec.yaml
(+345 files in other folders)
